🪁5️⃣ Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -1,63 +1,62 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>It Lingers</title>
+  </head>
+  <body>
+    <h1>It Lingers</h1>
+    <p>by Kendall Hollmon</p>
+    <p>
+      On a cold, dark, misty kind of day, <br />
+      As a ray of sun shines through,<br />
+      <em>Hope</em>, it lingers in the air,<br />
+      Like the smell of morning rain.<br />
+    </p>
 
-<head>
-  <meta charset="utf-8">
-  <title>It Lingers</title>
-</head>
-<body>
+    <p>
+      <em>Love</em>, it lingers in my heart,<br />
+      As I see you in my dreams!<br />
+      We would <em>never</em> fall apart,<br />
+      <strong>This is love to me it seems!</strong><br />
+    </p>
 
-  <h1>
-    It Lingers
-  </h1>
- <p>
-On a cold, dark, misty kind of day, <br>
-As a ray of sun shines through,<br>
-Hope, it lingers in the air,<br>
-Like the smell of morning rain.<br>
-  </p>
-Love, it lingers in my heart,<br>
-As I see you in my dreams!<br>
-We would never fall apart,<br>
-This is love to me it seems!<br>
-<p>
-   
-<p>
-  On a warm summer morning,<br>
-The sky is clear.<br>
-The sun is shining,<br>
-As I hold you near.<br>
-  </p>
-  
-  <p>
-I’ll walk across a river<br>
-To get to you.<br>
-Grab my hand!<br>
-We’ll make it through.<br>
-  </p>
-  
-  <p>
-I imagine sun,<br>
-I imagine love,<br>
-I’m calling out to you.<br>
-  </p>
-    
-  <p>
-I live in my dreams<br>
-Falling apart at the seams<br>
-I imagine someone!<br>
-  </p>
+    <p>
+      On a warm summer morning,<br />
+      The sky is <em>clear</em>.<br />
+      The sun is <em>shining</em>,<br />
+      As I hold you near.<br />
+    </p>
 
-Lonely walking through the street,<br>
-I will think of you some days.<br>
+    <p>
+      I’ll walk across a river<br />
+      To get to <em>you</em>.<br />
+      Grab my hand!<br />
+      <em>We’ll make it through</em>.<br />
+    </p>
 
-You linger in my mind,<br>
-Yes I know this isn’t real.<br>
-  </p>
-  
-  <p>
-    (Music lyrics to a song I created a year ago)
-  </p>
-  
-</body>
+    <p>
+      I imagine <strong>sun</strong>,<br />
+      I imagine <strong>love</strong>,<br />
+      I’m calling out to you.<br />
+    </p>
+
+    <p>
+      I live in my dreams<br />
+      Falling apart at the seams<br />
+      <strong>I imagine someone!</strong><br />
+    </p>
+    <p>
+      Lonely walking through the street,<br />
+      I will think of you some days.<br />
+    </p>
+
+    <em>You linger in my mind</em>,<br />
+    Yes I know this isn’t real.<br />
+
+    <p>
+      <strong><em>Yes I know this isn't real</em></strong
+      >.<br />
+    </p>
+  </body>
 </html>
